# golden-thread

./: .gitignore  AGENTS.md  README.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/scripts/: bench-message-lookup.cjs  bench-reaction-filter.cjs  bench-scroll-throttle.cjs  bench-tag-render.cjs
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  media_ipc.rs  media_ops.rs  media_worker.rs
app/src/styles/: base.css  components.css  views.css
app/src/ui/: api.ts  cache.ts  constants.ts  dom.ts  messages.ts  state.ts  types.ts  utils.test.ts  utils.ts
core/: Cargo.toml  build.rs
core/src/: crypto.rs  db.rs  diagnostics.rs  error.rs  importer.rs  lib.rs  migrations.rs  models.rs  query.rs  seed.rs
core/src/ffi/: mod.rs  signalbackup.rs
core/src/importer/: attachments.rs  fts.rs
core/tests/: hardening_tests.rs  importer_fixtures.rs  migration_tests.rs  pipeline_tests.rs  query.rs  query_tests.rs  tag_tests.rs
docs/: architecture.md  backup-research.md  code-review-2025-12-28.md  code-review-encryption-performance.md  code-review-senior-2025-12-28.md  codex-agent-guide.md  encryption-at-rest.md  future-improvements.md  handoff.md  implementation-plan.md  prd.md  renaming-plan.md  tech-strategy.md
patches/signalbackup-tools/: 0001-build-add-optional-static-library-target.patch  0002-api-add-C-bridge-and-export-helpers.patch  0003-db-relax-FK-enforcement-during-rebuild.patch
