[package]
name = "golden_thread_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "golden_thread_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = "1"
tempfile = "3.10"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
cmake = "0.1"
