[package]
name = "golden_thread_app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
golden_thread_core = { path = "../../core" }
tauri-plugin-dialog = { version = "2.2.0" }
tauri-plugin-clipboard-manager = { version = "2.2.1" }
base64 = "0.22"
image = { version = "0.25", default-features = true }
tempfile = "3.10"

[features]
custom-protocol = ["tauri/custom-protocol"]
